# VkEngine

./: .gitignore  CMakeLists.txt  TODO.txt  build.sh  cleanup.sh  compile_commands.json  imgui.ini  run.sh  unixBuild.sh
.cache/clangd/index/: SDL.c.27339EC9FAB942AA.idx  SDL.c.D795A77C37E1DC66.idx  SDL.h.75EA5776CDD7A3F3.idx  SDL.h.B279D43715F7FC1F.idx  SDL.h.F0AEEC4AF88EA895.idx  SDL_RLEaccel.c.2829A658E6EFC0D5.idx  SDL_RLEaccel.c.94B8A9F8A778DACC.idx  SDL_RLEaccel_c.h.CE0EDD3A0498FB9D.idx  SDL_RLEaccel_c.h.EDB2907939DA2E47.idx  SDL_alsa_audio.c.423BC6DD2A7EBD20.idx  SDL_alsa_audio.c.B9C10514E3F03171.idx  SDL_alsa_audio.h.25FD3BFA6D3E79DE.idx  SDL_alsa_audio.h.C4A42B8F5A8AE230.idx  SDL_assert.c.2219DC22355E130A.idx  SDL_assert.c.7BD577A078A66BEA.idx  SDL_assert.h.03F2725E0E6E007F.idx  SDL_assert.h.76B125E3EBAFAFE0.idx  SDL_assert.h.A0558D6D3FB84F2C.idx  SDL_assert_c.h.77BA7932B9DF8DD4.idx  SDL_assert_c.h.CF6144808D06B185.idx  SDL_atomic.c.5565FAD55AAE6A4A.idx  SDL_atomic.c.F00B006F9E25CA72.idx  SDL_atomic.h.A6A034B157C2F4C5.idx  SDL_atomic.h.C5C1CCE81FF67762.idx  SDL_atomic.h.D0DA57ECEC2057F9.idx  SDL_audio.c.0F4FC02D210BF241.idx  SDL_audio.c.E29F279FF31CE778.idx  SDL_audio.h.2DBE232F49831A99.idx  SDL_audio.h.CEF3896E2B44A19B.idx  SDL_audio.h.EF2688C6B919F112.idx  SDL_audio_c.h.4761402D58209E1B.idx  SDL_audio_c.h.5C449B03F3E9DFAE.idx  SDL_audio_channel_converters.h.34DD59757C9E10BA.idx  SDL_audio_channel_converters.h.B930D6060B0F0A36.idx  SDL_audio_resampler_filter.h.2DB695B8E93F9F8C.idx  SDL_audio_resampler_filter.h.BC038D36B546CEE9.idx  SDL_audiocvt.c.0C8495FFB5E1C599.idx  SDL_audiocvt.c.4B39A08027B7ACA0.idx  SDL_audiodev.c.9B3C23BB15A9EAFE.idx  SDL_audiodev.c.B5B6D170CA3EB8A3.idx  (+1979 more)
.zed/: settings.json
assets/compute_effects/: bloom_pass0.comp  bloom_pass2.comp  bloom_pass2.comp.spv  bloom_pass4.comp.spv  bloom_pass5.comp.spv  bloom_pass6.comp.spv  bloom_pass7.comp.spv  bloom_pass8.comp  bloom_pass9.comp  bloom_pass9.comp.spv  fxaa_pass0.comp  fxaa_pass1.comp  tone_mapping_pass0.comp.spv
assets/scenes/: 1loadingScene.json  1testScene.json  loadingScene.json  testScene.json
misc/: derived_script.cpp  gen  generate_script_factory.cpp  main  script.h  test_main.cpp
scripts/: loading.lua  main_camera.lua  rotate.lua  script.lua  spaceship.lua
shaders/: bloom_pass0.comp  bloom_pass0.comp.spv  bloom_pass1.comp  bloom_pass1.comp.spv  bloom_pass10.comp  bloom_pass10.comp.spv  bloom_pass11.comp  bloom_pass11.comp.spv  bloom_pass2.comp  bloom_pass2.comp.spv  bloom_pass3.comp  bloom_pass3.comp.spv  bloom_pass4.comp  bloom_pass4.comp.spv  bloom_pass5.comp  bloom_pass5.comp.spv  bloom_pass6.comp  bloom_pass6.comp.spv  bloom_pass7.comp  bloom_pass7.comp.spv  bloom_pass8.comp  bloom_pass8.comp.spv  bloom_pass9.comp  bloom_pass9.comp.spv  colored_triangle.frag.spv  colored_triangle.vert  colored_triangle.vert.spv  colored_triangle_mesh.vert.spv  fxaa.comp  fxaa.comp.spv  fxaa_pass0.comp  fxaa_pass0.comp.spv  fxaa_pass1.comp  fxaa_pass1.comp.spv  gradient.comp  gradient.comp.spv  mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv  (+23 more)
shaders/compute/: skybox_brdf_lut_pass0.comp  skybox_brdf_lut_pass0.comp.spv
src/: CMakeLists.txt  camera.cpp  camera.h  deletion_queue.cpp  entity.cpp  entity.h  game_app.cpp  game_object.cpp  game_object.h  main.cpp  resource_manager.cpp  resource_manager.h  scene_node.cpp  scene_node.h  script_manager.cpp  script_manager.h  skybox.cpp  skybox.h  uuid.h  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_enum_string_helper.h  vk_images.cpp  vk_images.h  vk_initializers.cpp  vk_initializers.h  vk_loader.cpp  vk_loader.h  vk_materials.cpp  vk_materials.h  vk_pipelines.cpp  vk_pipelines.h  vk_scene.cpp  vk_scene.h  vk_swapchain.cpp  vk_swapchain.h  vk_types.h  vk_window.cpp  (+1 more)
src/compute_effects/: compute_effect.cpp  compute_effect.h  fxaa.cpp  fxaa.h
src/core/: CMakeLists.txt  asset_manager.cpp  asset_manager.h  camera.cpp  camera.h  compute_effect.cpp  compute_effect.h  compute_effects_manager.cpp  compute_effects_manager.h  deletion_queue.h  editor_camera.cpp  editor_camera.h  entity.cpp  entity.h  pipeline_resource_manager.cpp  pipeline_resource_manager.h  resource_manager.cpp  resource_manager.h  scene_manager.h  script_manager.cpp  script_manager.h  skybox.cpp  skybox.h  vk_descriptors.cpp  vk_descriptors.h  vk_device.h  vk_engine.cpp  vk_engine.h  vk_images.cpp  vk_images.h  vk_initializers.h  vk_loader.cpp  vk_loader.h  vk_materials.cpp  vk_pipelines.h  vk_scene.cpp  vk_scene.h  vk_swapchain.cpp  vk_swapchain.h  vk_types.h  (+2 more)
src/core/components/: camera.cpp  camera.h  components.h  destroy.h  gltf.cpp  gltf.h  metadata.cpp  metadata.h  script.cpp  script.h  sphere_collider.cpp  sphere_collider.h  sprite.cpp  sprite.h  transform.cpp  transform.h  utils.h
src/core/compute_effects/: compute_effect.cpp  compute_effect.h
src/core/ecs_components/: components.cpp  components.h
src/ecs_components/: components.h  gltf.h  transform.h
src/ecs_core/: component_array.h  component_manager.h  coordinator.h  entity_manager.h  event.h  event_manager.h  system.h  system_manager.h
src/ecs_systems/: render_system.cpp  systems.h
src/editor/: CMakeLists.txt  editor_app.cpp  editor_app.h  main.cpp
src/game/: CMakeLists.txt  game_app.cpp  game_app.h  main.cpp
src/scripts/: asteroid_script.h  asteroid_spawner_script.h  camera_script.h  spaceship_script.h
